Fri Apr 19 16:25:18 2002  George Lebl <jirka@5z.com>

	* gnome-file-entry.c, gnome-icon-entry.c: export the file expanding
	  function from file-entry to icon-entry (underscore prefixed
	  function not in a header) and use this in icon entry so that
	  we can store our selection outside of the file entry which changes
	  often.  This way we fix #76640 and #77215.  Fix a few leaks
	  in icon entry.  Use gtk_window_present to show the dialog once
	  hidden.  Always reselect the picked icon on the dialog to have
	  proper 'Cancel' behaviour.

2002-04-09  jacob berkman  <jacob@ximian.com>

	* gnome-file-entry.c (tilde_expand): move up and fix some warnings

2002-04-09  Anders Carlsson  <andersca@gnu.org>

	* gnome-dialog.c (gnome_dialog_set_parent): Don't try to move
	the dialog over windows. Fixes #71076.

	* gnome-color-picker.c (drag_data_received): Emit color_changed
	signal, fixes #77988.

2002-04-08  Anders Carlsson  <andersca@gnu.org>

	* gnome-appbar.c: Remove pointless debug-output. Fixes #75699.

	* gnome-dateedit.c: Revert Richard's patch so that keynav works
	again.

2002-03-11  Anders Carlsson  <andersca@gnu.org>

	* gnome-icon-item.c (gnome_icon_text_item_configure): Set the
	font description.

2002-03-05  jacob berkman  <jacob@ximian.com>

	* gnome-ui-init.c (libgnomeui_segv_setup): listen to SIGABRT and
	SIGTRAP also

2002-03-07  James Henstridge  <james@daa.com.au>

	* Makefile.am ($(libgnomeui_2_la_OBJECTS)): change target from
	$(OBJECTS), to give automake 1.5 compatibility.

2002-01-21  James Henstridge  <james@daa.com.au>

	* gnome-client.c (gnome_client_module_info_get): fix up reference
	to gnome_gtk_module_info_get().

	* gnome-ui-init.c (libgnomeui_module_info_get): use the gtk
	GnomeModuleInfo from libbonoboui.

	* gnome-ui-init.h (GNOME_GTK_MODULE): define this to
	BONOBO_GTK_MODULE for compatibility.

2002-02-27  Mark McLoughlin  <mark@skynet.ie>

	* gnome-entry.c: (set_combo_items): don't set the popdown
	list if there's nothing in it.
